--- a/dists/msvc9/residual.vcproj
+++ b/dists/msvc9/residual.vcproj
@@ -988,134 +988,6 @@
 					>
 				</File>
 			</Filter>
-			<Filter
-				Name="backend"
-				>
-				<Filter
-					Name="timer"
-					>
-					<Filter
-						Name="default"
-						>
-						<File
-							RelativePath="..\..\backends\timer\default\default-timer.cpp"
-							>
-						</File>
-						<File
-							RelativePath="..\..\backends\timer\default\default-timer.h"
-							>
-						</File>
-					</Filter>
-				</Filter>
-				<Filter
-					Name="fs"
-					>
-					<File
-						RelativePath="..\..\backends\fs\abstract-fs.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\backends\fs\abstract-fs.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\backends\fs\fs-factory.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\backends\fs\stdiostream.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\backends\fs\stdiostream.h"
-						>
-					</File>
-					<Filter
-						Name="windows"
-						>
-						<File
-							RelativePath="..\..\backends\fs\windows\windows-fs-factory.cpp"
-							>
-						</File>
-						<File
-							RelativePath="..\..\backends\fs\windows\windows-fs-factory.h"
-							>
-						</File>
-					</Filter>
-				</Filter>
-				<Filter
-					Name="saves"
-					>
-					<File
-						RelativePath="..\..\backends\saves\savefile.cpp"
-						>
-					</File>
-					<Filter
-						Name="default"
-						>
-						<File
-							RelativePath="..\..\backends\saves\default\default-saves.cpp"
-							>
-						</File>
-						<File
-							RelativePath="..\..\backends\saves\default\default-saves.h"
-							>
-						</File>
-					</Filter>
-				</Filter>
-				<Filter
-					Name="platform"
-					>
-					<File
-						RelativePath="..\..\backends\platform\driver.h"
-						>
-					</File>
-					<Filter
-						Name="sdl"
-						>
-						<File
-							RelativePath="..\..\backends\platform\sdl\driver_gl.cpp"
-							>
-						</File>
-						<File
-							RelativePath="..\..\backends\platform\sdl\driver_gl.h"
-							>
-						</File>
-						<File
-							RelativePath="..\..\backends\platform\sdl\driver_sdl.cpp"
-							>
-						</File>
-						<File
-							RelativePath="..\..\backends\platform\sdl\driver_sdl.h"
-							>
-						</File>
-						<File
-							RelativePath="..\..\backends\platform\sdl\driver_tinygl.cpp"
-							>
-						</File>
-						<File
-							RelativePath="..\..\backends\platform\sdl\driver_tinygl.h"
-							>
-						</File>
-					</Filter>
-				</Filter>
-				<Filter
-					Name="events"
-					>
-					<Filter
-						Name="default"
-						>
-						<File
-							RelativePath="..\..\backends\events\default\default-events.cpp"
-							>
-						</File>
-						<File
-							RelativePath="..\..\backends\events\default\default-events.h"
-							>
-						</File>
-					</Filter>
-				</Filter>
-			</Filter>
 		</Filter>
 		<Filter
 			Name="mixer"
@@ -1161,6 +1033,134 @@
 				RelativePath="..\..\dists\residual.rc"
 				>
 			</File>
+		</Filter>
+		<Filter
+			Name="backends"
+			>
+			<Filter
+				Name="timer"
+				>
+				<Filter
+					Name="default"
+					>
+					<File
+						RelativePath="..\..\backends\timer\default\default-timer.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\backends\timer\default\default-timer.h"
+						>
+					</File>
+				</Filter>
+			</Filter>
+			<Filter
+				Name="fs"
+				>
+				<File
+					RelativePath="..\..\backends\fs\abstract-fs.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\backends\fs\abstract-fs.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\backends\fs\fs-factory.h"
+					>
+				</File>
+				<File
+					RelativePath="..\..\backends\fs\stdiostream.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\backends\fs\stdiostream.h"
+					>
+				</File>
+				<Filter
+					Name="windows"
+					>
+					<File
+						RelativePath="..\..\backends\fs\windows\windows-fs-factory.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\backends\fs\windows\windows-fs-factory.h"
+						>
+					</File>
+				</Filter>
+			</Filter>
+			<Filter
+				Name="saves"
+				>
+				<File
+					RelativePath="..\..\backends\saves\savefile.cpp"
+					>
+				</File>
+				<Filter
+					Name="default"
+					>
+					<File
+						RelativePath="..\..\backends\saves\default\default-saves.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\backends\saves\default\default-saves.h"
+						>
+					</File>
+				</Filter>
+			</Filter>
+			<Filter
+				Name="platform"
+				>
+				<File
+					RelativePath="..\..\backends\platform\driver.h"
+					>
+				</File>
+				<Filter
+					Name="sdl"
+					>
+					<File
+						RelativePath="..\..\backends\platform\sdl\driver_gl.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\backends\platform\sdl\driver_gl.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\backends\platform\sdl\driver_sdl.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\backends\platform\sdl\driver_sdl.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\backends\platform\sdl\driver_tinygl.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\backends\platform\sdl\driver_tinygl.h"
+						>
+					</File>
+				</Filter>
+			</Filter>
+			<Filter
+				Name="events"
+				>
+				<Filter
+					Name="default"
+					>
+					<File
+						RelativePath="..\..\backends\events\default\default-events.cpp"
+						>
+					</File>
+					<File
+						RelativePath="..\..\backends\events\default\default-events.h"
+						>
+					</File>
+				</Filter>
+			</Filter>
 		</Filter>
 		<File
 			RelativePath="..\..\README"
