Updated the MSVC project files of the SCI engine (compilation is broken with SCI under MSVC)
svn-id: r40350

--- a/dists/msvc7/sci.vcproj
+++ b/dists/msvc7/sci.vcproj
@@ -118,9 +118,6 @@
 				RelativePath="..\..\engines\sci\engine\grammar.cpp">
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\engine\heapmgr.h">
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\engine\intmap.cpp">
 			</File>
 			<File
@@ -417,10 +414,22 @@
 			<Filter
 				Name="softseq">
 				<File
+					RelativePath="..\..\engines\sci\sfx\softseq\adlib.cpp">
+				</File>
+				<File
+					RelativePath="..\..\engines\sci\sfx\softseq\adlib.h">
+				</File>
+				<File
 					RelativePath="..\..\engines\sci\sfx\softseq\amiga.cpp">
 				</File>
 				<File
 					RelativePath="..\..\engines\sci\sfx\softseq\opl2.cpp">
+				</File>
+				<File
+					RelativePath="..\..\engines\sci\sfx\softseq\pcjr.cpp">
+				</File>
+				<File
+					RelativePath="..\..\engines\sci\sfx\softseq\pcjr.h">
 				</File>
 				<File
 					RelativePath="..\..\engines\sci\sfx\softseq\pcspeaker.cpp">
