Added reference to sci\sfx\player\player.cpp
svn-id: r40352

--- a/dists/msvc8/sci.vcproj
+++ b/dists/msvc8/sci.vcproj
@@ -557,6 +557,10 @@
 				Name="player"
 				>
 				<File
+					RelativePath="..\..\engines\sci\sfx\player\player.cpp"
+					>
+				</File>
+				<File
 					RelativePath="..\..\engines\sci\sfx\player\players.cpp"
 					>
 				</File>
