--- a/dists/msvc9/sci.vcproj
+++ b/dists/msvc9/sci.vcproj
@@ -515,15 +515,19 @@
 			Name="sfx"
 			>
 			<File
-				RelativePath="..\..\engines\sci\sfx\adlib.cpp"
+				RelativePath="..\..\engines\sci\sfx\adlib_sbi.cpp"
 				>
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\sfx\adlib.h"
+				RelativePath="..\..\engines\sci\sfx\adlib_sbi.h"
 				>
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\sfx\core.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\sfx\core.h"
 				>
 			</File>
 			<File
@@ -535,7 +539,31 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\sfx\iterator.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\sfx\iterator_internal.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\sfx\player.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\sfx\sci_midi.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\sfx\sequencer.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\sfx\sfx.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\sfx\sfx_pcm.h"
 				>
 			</File>
 			<File
@@ -544,6 +572,10 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\sfx\songlib.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\sfx\songlib.h"
 				>
 			</File>
 			<Filter
@@ -557,6 +589,10 @@
 			<Filter
 				Name="player"
 				>
+				<File
+					RelativePath="..\..\engines\sci\sfx\player\player.cpp"
+					>
+				</File>
 				<File
 					RelativePath="..\..\engines\sci\sfx\player\players.cpp"
 					>
