--- a/dists/msvc9/residual.vcproj
+++ b/dists/msvc9/residual.vcproj
@@ -43,7 +43,7 @@
 				AdditionalOptions="/wd 4996"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\..\"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;USE_ZLIB"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;USE_ZLIB;USE_OPENGL;SDL_BACKEND"
 				RuntimeLibrary="1"
 				EnableEnhancedInstructionSet="2"
 				FloatingPointModel="2"
@@ -130,7 +130,7 @@
 				OmitFramePointers="true"
 				WholeProgramOptimization="false"
 				AdditionalIncludeDirectories="..\..\"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;USE_ZLIB"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;USE_ZLIB;USE_OPENGL;SDL_BACKEND"
 				RuntimeLibrary="0"
 				EnableEnhancedInstructionSet="2"
 				FloatingPointModel="2"
@@ -361,6 +361,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\common\system.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\common\system.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\common\timer.h"
 				>
 			</File>
@@ -438,6 +446,26 @@
 			</File>
 			<File
 				RelativePath="..\..\engine\font.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engine\gfx_base.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engine\gfx_opengl.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engine\gfx_opengl.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engine\gfx_tinygl.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engine\gfx_tinygl.h"
 				>
 			</File>
 			<File
@@ -1037,6 +1065,14 @@
 		<Filter
 			Name="backends"
 			>
+			<File
+				RelativePath="..\..\backends\base-backend.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\backends\base-backend.h"
+				>
+			</File>
 			<Filter
 				Name="timer"
 				>
@@ -1112,35 +1148,15 @@
 			<Filter
 				Name="platform"
 				>
-				<File
-					RelativePath="..\..\backends\platform\driver.h"
-					>
-				</File>
 				<Filter
 					Name="sdl"
 					>
 					<File
-						RelativePath="..\..\backends\platform\sdl\driver_gl.cpp"
+						RelativePath="..\..\backends\platform\sdl\sdl.cpp"
 						>
 					</File>
 					<File
-						RelativePath="..\..\backends\platform\sdl\driver_gl.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\backends\platform\sdl\driver_sdl.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\backends\platform\sdl\driver_sdl.h"
-						>
-					</File>
-					<File
-						RelativePath="..\..\backends\platform\sdl\driver_tinygl.cpp"
-						>
-					</File>
-					<File
-						RelativePath="..\..\backends\platform\sdl\driver_tinygl.h"
+						RelativePath="..\..\backends\platform\sdl\sdl.h"
 						>
 					</File>
 				</Filter>
