--- a/dists/msvc7/residual.vcproj
+++ b/dists/msvc7/residual.vcproj
@@ -21,7 +21,7 @@
 				AdditionalOptions="/wd 4996"
 				Optimization="0"
 				AdditionalIncludeDirectories="..\..\"
-				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;USE_ZLIB"
+				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;USE_ZLIB;USE_OPENGL;SDL_BACKEND"
 				RuntimeLibrary="1"
 				EnableEnhancedInstructionSet="2"
 				FloatingPointModel="2"
@@ -72,7 +72,7 @@
 				OmitFramePointers="TRUE"
 				WholeProgramOptimization="FALSE"
 				AdditionalIncludeDirectories="..\..\"
-				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;USE_ZLIB"
+				PreprocessorDefinitions="WIN32;NDEBUG;_WINDOWS;USE_ZLIB;USE_OPENGL;SDL_BACKEND"
 				RuntimeLibrary="0"
 				EnableEnhancedInstructionSet="2"
 				FloatingPointModel="2"
@@ -238,6 +238,12 @@
 				RelativePath="..\..\common\sys.h">
 			</File>
 			<File
+				RelativePath="..\..\common\system.cpp">
+			</File>
+			<File
+				RelativePath="..\..\common\system.h">
+			</File>
+			<File
 				RelativePath="..\..\common\timer.h">
 			</File>
 			<File
@@ -296,6 +302,21 @@
 			</File>
 			<File
 				RelativePath="..\..\engine\font.h">
+			</File>
+			<File
+				RelativePath="..\..\engine\gfx_base.h">
+			</File>
+			<File
+				RelativePath="..\..\engine\gfx_opengl.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engine\gfx_opengl.h">
+			</File>
+			<File
+				RelativePath="..\..\engine\gfx_tinygl.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engine\gfx_tinygl.h">
 			</File>
 			<File
 				RelativePath="..\..\engine\internal_version.h">
@@ -745,6 +766,12 @@
 		</Filter>
 		<Filter
 			Name="backends">
+			<File
+				RelativePath="..\..\backends\base-backend.cpp">
+			</File>
+			<File
+				RelativePath="..\..\backends\base-backend.h">
+			</File>
 			<Filter
 				Name="timer">
 				<Filter
@@ -801,28 +828,13 @@
 			</Filter>
 			<Filter
 				Name="platform">
-				<File
-					RelativePath="..\..\backends\platform\driver.h">
-				</File>
 				<Filter
 					Name="sdl">
 					<File
-						RelativePath="..\..\backends\platform\sdl\driver_gl.cpp">
+						RelativePath="..\..\backends\platform\sdl\sdl.cpp">
 					</File>
 					<File
-						RelativePath="..\..\backends\platform\sdl\driver_gl.h">
-					</File>
-					<File
-						RelativePath="..\..\backends\platform\sdl\driver_sdl.cpp">
-					</File>
-					<File
-						RelativePath="..\..\backends\platform\sdl\driver_sdl.h">
-					</File>
-					<File
-						RelativePath="..\..\backends\platform\sdl\driver_tinygl.cpp">
-					</File>
-					<File
-						RelativePath="..\..\backends\platform\sdl\driver_tinygl.h">
+						RelativePath="..\..\backends\platform\sdl\sdl.h">
 					</File>
 				</Filter>
 			</Filter>
