--- a/dists/msvc7/residual.vcproj
+++ b/dists/msvc7/residual.vcproj
@@ -200,6 +200,11 @@
 			</File>
 			<File
 				RelativePath="..\..\common\mutex.cpp">
+				<FileConfiguration
+					Name="Debug|Win32">
+					<Tool
+						Name="VCCLCompilerTool"/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\..\common\mutex.h">
@@ -831,10 +836,10 @@
 				<Filter
 					Name="sdl">
 					<File
-						RelativePath="..\..\backends\platform\sdl\sdl.cpp">
+						RelativePath="..\..\backends\platform\sdl\sdl_driver.cpp">
 					</File>
 					<File
-						RelativePath="..\..\backends\platform\sdl\sdl.h">
+						RelativePath="..\..\backends\platform\sdl\sdl_driver.h">
 					</File>
 				</Filter>
 			</Filter>
