--- a/dists/msvc71/residual.vcproj
+++ b/dists/msvc71/residual.vcproj
@@ -602,96 +602,6 @@
 				</File>
 			</Filter>
 			<Filter
-				Name="tinygl">
-				<File
-					RelativePath="..\..\engine\tinygl\api.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\arrays.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\clear.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\clip.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\get.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\gl.h">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\image_util.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\init.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\light.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\list.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\matrix.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\memory.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\misc.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\opinfo.h">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\select.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\specbuf.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\specbuf.h">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\texture.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\vertex.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\zbuffer.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\zbuffer.h">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\zgl.h">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\zline.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\zline.h">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\zmath.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\zmath.h">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\ztriangle.cpp">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\ztriangle.h">
-				</File>
-				<File
-					RelativePath="..\..\engine\tinygl\ztriangle_shadow.cpp">
-				</File>
-			</Filter>
-			<Filter
 				Name="imuse">
 				<File
 					RelativePath="..\..\engine\imuse\imuse.cpp">
@@ -868,6 +778,99 @@
 						RelativePath="..\..\backends\events\default\default-events.h">
 					</File>
 				</Filter>
+			</Filter>
+		</Filter>
+		<Filter
+			Name="graphics">
+			<Filter
+				Name="tinygl">
+				<File
+					RelativePath="..\..\graphics\tinygl\api.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\arrays.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\clear.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\clip.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\get.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\gl.h">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\image_util.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\init.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\light.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\list.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\matrix.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\memory.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\misc.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\opinfo.h">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\select.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\specbuf.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\specbuf.h">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\texture.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\vertex.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\zbuffer.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\zbuffer.h">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\zgl.h">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\zline.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\zline.h">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\zmath.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\zmath.h">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\ztriangle.cpp">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\ztriangle.h">
+				</File>
+				<File
+					RelativePath="..\..\graphics\tinygl\ztriangle_shadow.cpp">
+				</File>
 			</Filter>
 		</Filter>
 		<File
