Fixed compilation under all versions of MSVC (renamed sound/softsynth/opl/opl.cpp and .h into opl_impl.h and opl_inc.h respectively)
svn-id: r40379

--- a/dists/msvc8/scummvm.vcproj
+++ b/dists/msvc8/scummvm.vcproj
@@ -864,6 +864,14 @@
 						RelativePath="..\..\sound\softsynth\opl\mame.h"
 						>
 					</File>
+					<File
+						RelativePath="..\..\sound\softsynth\opl\opl_impl.h"
+						>
+					</File>
+					<File
+						RelativePath="..\..\sound\softsynth\opl\opl_inc.h"
+						>
+					</File>
 				</Filter>
 			</Filter>
 			<Filter
