--- a/dists/msvc7/scummvm.vcproj
+++ b/dists/msvc7/scummvm.vcproj
@@ -625,10 +625,10 @@
 						RelativePath="..\..\sound\softsynth\opl\mame.h">
 					</File>
 					<File
-						RelativePath="..\..\sound\softsynth\opl\opl.cpp">
+						RelativePath="..\..\sound\softsynth\opl\opl_impl.h">
 					</File>
 					<File
-						RelativePath="..\..\sound\softsynth\opl\opl.h">
+						RelativePath="..\..\sound\softsynth\opl\opl_inc.h">
 					</File>
 				</Filter>
 			</Filter>
