Added file gfx\gfx_pixmap_scale.cpp
svn-id: r40400

--- a/dists/msvc8/sci.vcproj
+++ b/dists/msvc8/sci.vcproj
@@ -358,6 +358,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\gfx\gfx_pixmap_scale.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\gfx\gfx_res_options.cpp"
 				>
 			</File>
