--- a/dists/msvc7/sci.vcproj
+++ b/dists/msvc7/sci.vcproj
@@ -223,9 +223,6 @@
 		<Filter
 			Name="gfx">
 			<File
-				RelativePath="..\..\engines\sci\gfx\crossblit.h">
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\gfx\font.cpp">
 			</File>
 			<File
@@ -245,6 +242,9 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\gfx\gfx_options.h">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\gfx\gfx_pixmap_scale.cpp">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\gfx\gfx_res_options.cpp">
@@ -284,9 +284,6 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\gfx\gfx_widgets.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\gfx\line.h">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\gfx\menubar.cpp">
