--- a/dists/msvc71/sci.vcproj
+++ b/dists/msvc71/sci.vcproj
@@ -237,9 +237,6 @@
 		<Filter
 			Name="gfx">
 			<File
-				RelativePath="..\..\engines\sci\gfx\crossblit.h">
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\gfx\font.cpp">
 			</File>
 			<File
@@ -259,6 +256,9 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\gfx\gfx_options.h">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\gfx\gfx_pixmap_scale.cpp">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\gfx\gfx_res_options.cpp">
@@ -298,9 +298,6 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\gfx\gfx_widgets.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\gfx\line.h">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\gfx\menubar.cpp">
