--- a/dists/msvc9/sci.vcproj
+++ b/dists/msvc9/sci.vcproj
@@ -327,10 +327,6 @@
 			Name="gfx"
 			>
 			<File
-				RelativePath="..\..\engines\sci\gfx\crossblit.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\engines\sci\gfx\font.cpp"
 				>
 			</File>
@@ -356,6 +352,10 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\gfx\gfx_options.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\gfx\gfx_pixmap_scale.cpp"
 				>
 			</File>
 			<File
@@ -408,10 +408,6 @@
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\gfx\gfx_widgets.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\gfx\line.h"
 				>
 			</File>
 			<File
