Added the new hardwarekeys.cpp file
svn-id: r40448

--- a/dists/msvc7/scummvm.vcproj
+++ b/dists/msvc7/scummvm.vcproj
@@ -714,6 +714,9 @@
 					RelativePath="..\..\backends\platform\sdl\graphics.cpp">
 				</File>
 				<File
+					RelativePath="..\..\backends\platform\sdl\hardwarekeys.cpp">
+				</File>
+				<File
 					RelativePath="..\..\backends\platform\sdl\main.cpp">
 					<FileConfiguration
 						Name="Debug|Win32">
