Updated the MSVC project files of the SCI engine
svn-id: r40610

--- a/dists/msvc71/sci.vcproj
+++ b/dists/msvc71/sci.vcproj
@@ -201,10 +201,13 @@
 				RelativePath="..\..\engines\sci\engine\savegame.h">
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\engine\script.h">
+				RelativePath="..\..\engines\sci\engine\sciconsole.cpp">
 			</File>
 			<File
-				RelativePath="..\..\engines\sci\engine\scriptconsole.cpp">
+				RelativePath="..\..\engines\sci\engine\sciconsole.h">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\engine\script.h">
 			</File>
 			<File
 				RelativePath="..\..\engines\sci\engine\scriptdebug.cpp">
@@ -337,33 +340,6 @@
 			</File>
 		</Filter>
 		<Filter
-			Name="scicore">
-			<File
-				RelativePath="..\..\engines\sci\scicore\decompressor.cpp">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\scicore\decompressor.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\scicore\resource.cpp">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\scicore\resource.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\scicore\sciconsole.h">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\scicore\vocab_debug.cpp">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\scicore\vocabulary.cpp">
-			</File>
-			<File
-				RelativePath="..\..\engines\sci\scicore\vocabulary.h">
-			</File>
-		</Filter>
-		<Filter
 			Name="sfx">
 			<File
 				RelativePath="..\..\engines\sci\sfx\adlib_sbi.cpp">
@@ -475,6 +451,12 @@
 			RelativePath="..\..\engines\sci\console.h">
 		</File>
 		<File
+			RelativePath="..\..\engines\sci\decompressor.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\decompressor.h">
+		</File>
+		<File
 			RelativePath="..\..\engines\sci\detection.cpp">
 		</File>
 		<File
@@ -482,6 +464,12 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\sci\exereader.h">
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\resource.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\resource.h">
 		</File>
 		<File
 			RelativePath="..\..\engines\sci\sci.cpp">
@@ -500,6 +488,15 @@
 		</File>
 		<File
 			RelativePath="..\..\engines\sci\uinput.h">
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\vocab_debug.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\vocabulary.cpp">
+		</File>
+		<File
+			RelativePath="..\..\engines\sci\vocabulary.h">
 		</File>
 	</Files>
 	<Globals>
