Updated the MSVC project files of the AGOS and KYRA engines
svn-id: r40639

--- a/dists/msvc71/agos.vcproj
+++ b/dists/msvc71/agos.vcproj
@@ -166,6 +166,9 @@
 			RelativePath="..\..\engines\agos\event.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\agos\feeble.cpp">
+		</File>
+		<File
 			RelativePath="..\..\engines\agos\gfx.cpp">
 		</File>
 		<File
