--- a/dists/msvc71/kyra.vcproj
+++ b/dists/msvc71/kyra.vcproj
@@ -250,6 +250,9 @@
 			RelativePath="..\..\engines\kyra\saveload_lok.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\saveload_lol.cpp">
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\saveload_mr.cpp">
 		</File>
 		<File
