--- a/dists/msvc9/agos.vcproj
+++ b/dists/msvc9/agos.vcproj
@@ -232,6 +232,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\agos\feeble.cpp"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\agos\gfx.cpp"
 			>
 		</File>
