--- a/dists/msvc9/kyra.vcproj
+++ b/dists/msvc9/kyra.vcproj
@@ -344,6 +344,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\kyra\saveload_lol.cpp"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\kyra\saveload_mr.cpp"
 			>
 		</File>
