--- a/dists/msvc7/agos.vcproj
+++ b/dists/msvc7/agos.vcproj
@@ -152,6 +152,9 @@
 			RelativePath="..\..\engines\agos\event.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\agos\feeble.cpp">
+		</File>
+		<File
 			RelativePath="..\..\engines\agos\gfx.cpp">
 		</File>
 		<File
