--- a/dists/msvc8/agos.vcproj
+++ b/dists/msvc8/agos.vcproj
@@ -231,6 +231,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\agos\feeble.cpp"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\agos\gfx.cpp"
 			>
 		</File>
