--- a/dists/msvc7/residual.vcproj
+++ b/dists/msvc7/residual.vcproj
@@ -200,11 +200,6 @@
 			</File>
 			<File
 				RelativePath="..\..\common\mutex.cpp">
-				<FileConfiguration
-					Name="Debug|Win32">
-					<Tool
-						Name="VCCLCompilerTool"/>
-				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\..\common\mutex.h">
@@ -297,12 +292,6 @@
 				RelativePath="..\..\engine\costume.h">
 			</File>
 			<File
-				RelativePath="..\..\engine\engine.cpp">
-			</File>
-			<File
-				RelativePath="..\..\engine\engine.h">
-			</File>
-			<File
 				RelativePath="..\..\engine\font.cpp">
 			</File>
 			<File
@@ -322,6 +311,12 @@
 			</File>
 			<File
 				RelativePath="..\..\engine\gfx_tinygl.h">
+			</File>
+			<File
+				RelativePath="..\..\engine\grim.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engine\grim.h">
 			</File>
 			<File
 				RelativePath="..\..\engine\internal_version.h">
