--- a/dists/msvc71/residual.vcproj
+++ b/dists/msvc71/residual.vcproj
@@ -214,11 +214,6 @@
 			</File>
 			<File
 				RelativePath="..\..\common\mutex.cpp">
-				<FileConfiguration
-					Name="Debug|Win32">
-					<Tool
-						Name="VCCLCompilerTool"/>
-				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\..\common\mutex.h">
@@ -311,12 +306,6 @@
 				RelativePath="..\..\engine\costume.h">
 			</File>
 			<File
-				RelativePath="..\..\engine\engine.cpp">
-			</File>
-			<File
-				RelativePath="..\..\engine\engine.h">
-			</File>
-			<File
 				RelativePath="..\..\engine\font.cpp">
 			</File>
 			<File
@@ -336,6 +325,12 @@
 			</File>
 			<File
 				RelativePath="..\..\engine\gfx_tinygl.h">
+			</File>
+			<File
+				RelativePath="..\..\engine\grim.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engine\grim.h">
 			</File>
 			<File
 				RelativePath="..\..\engine\internal_version.h">
