--- a/dists/msvc9/residual.vcproj
+++ b/dists/msvc9/residual.vcproj
@@ -311,13 +311,6 @@
 			<File
 				RelativePath="..\..\common\mutex.cpp"
 				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-					/>
-				</FileConfiguration>
 			</File>
 			<File
 				RelativePath="..\..\common\mutex.h"
@@ -440,14 +433,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\engine\engine.cpp"
-				>
-			</File>
-			<File
-				RelativePath="..\..\engine\engine.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\engine\font.cpp"
 				>
 			</File>
@@ -473,6 +458,14 @@
 			</File>
 			<File
 				RelativePath="..\..\engine\gfx_tinygl.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engine\grim.cpp"
+				>
+			</File>
+			<File
+				RelativePath="..\..\engine\grim.h"
 				>
 			</File>
 			<File
