Updated the MSVC project files with the latest changes to file structure
svn-id: r40756

--- a/dists/msvc71/sci.vcproj
+++ b/dists/msvc71/sci.vcproj
@@ -171,6 +171,9 @@
 				RelativePath="..\..\engines\sci\engine\kmenu.cpp">
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\engine\kmisc.cpp">
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\engine\kmovement.cpp">
 			</File>
 			<File
