--- a/dists/msvc8/sci.vcproj
+++ b/dists/msvc8/sci.vcproj
@@ -238,6 +238,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\engine\kmisc.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\engine\kmovement.cpp"
 				>
 			</File>
