--- a/dists/msvc9/sci.vcproj
+++ b/dists/msvc9/sci.vcproj
@@ -239,6 +239,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\engine\kmisc.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\engine\kmovement.cpp"
 				>
 			</File>
