--- a/dists/msvc7/sci.vcproj
+++ b/dists/msvc7/sci.vcproj
@@ -157,6 +157,9 @@
 				RelativePath="..\..\engines\sci\engine\kmenu.cpp">
 			</File>
 			<File
+				RelativePath="..\..\engines\sci\engine\kmisc.cpp">
+			</File>
+			<File
 				RelativePath="..\..\engines\sci\engine\kmovement.cpp">
 			</File>
 			<File
