--- a/dists/msvc9/scummvm.vcproj
+++ b/dists/msvc9/scummvm.vcproj
@@ -1653,19 +1653,19 @@
 				Name="video"
 				>
 				<File
-					RelativePath="..\..\graphics\video\dxa_player.cpp"
+					RelativePath="..\..\graphics\video\dxa_decoder.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\graphics\video\dxa_player.h"
+					RelativePath="..\..\graphics\video\dxa_decoder.h"
 					>
 				</File>
 				<File
-					RelativePath="..\..\graphics\video\flic_player.cpp"
+					RelativePath="..\..\graphics\video\flic_decoder.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\graphics\video\flic_player.h"
+					RelativePath="..\..\graphics\video\flic_decoder.h"
 					>
 				</File>
 				<File
@@ -1677,11 +1677,11 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\graphics\video\smk_player.cpp"
+					RelativePath="..\..\graphics\video\smk_decoder.cpp"
 					>
 				</File>
 				<File
-					RelativePath="..\..\graphics\video\smk_player.h"
+					RelativePath="..\..\graphics\video\smk_decoder.h"
 					>
 				</File>
 				<File
