Updated the MSVC project files of the gob engine (added helper.h)
svn-id: r40769

--- a/dists/msvc7/gob.vcproj
+++ b/dists/msvc7/gob.vcproj
@@ -260,6 +260,9 @@
 			RelativePath="..\..\engines\gob\goblin_v4.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\gob\helper.h">
+		</File>
+		<File
 			RelativePath="..\..\engines\gob\init.cpp">
 		</File>
 		<File
