--- a/dists/msvc71/gob.vcproj
+++ b/dists/msvc71/gob.vcproj
@@ -274,6 +274,9 @@
 			RelativePath="..\..\engines\gob\goblin_v4.cpp">
 		</File>
 		<File
+			RelativePath="..\..\engines\gob\helper.h">
+		</File>
+		<File
 			RelativePath="..\..\engines\gob\init.cpp">
 		</File>
 		<File
