--- a/dists/msvc8/gob.vcproj
+++ b/dists/msvc8/gob.vcproj
@@ -375,6 +375,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\gob\helper.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\gob\init.cpp"
 			>
 		</File>
