--- a/dists/msvc9/gob.vcproj
+++ b/dists/msvc9/gob.vcproj
@@ -376,6 +376,10 @@
 			>
 		</File>
 		<File
+			RelativePath="..\..\engines\gob\helper.h"
+			>
+		</File>
+		<File
 			RelativePath="..\..\engines\gob\init.cpp"
 			>
 		</File>
