Updated the MSVC files of the SCI engine (added the KQ6 SEQ decoder)
svn-id: r40777

--- a/dists/msvc7/sci.vcproj
+++ b/dists/msvc7/sci.vcproj
@@ -327,6 +327,12 @@
 			<File
 				RelativePath="..\..\engines\sci\gfx\res_view1.cpp">
 			</File>
+			<File
+				RelativePath="..\..\engines\sci\gfx\seq_decoder.cpp">
+			</File>
+			<File
+				RelativePath="..\..\engines\sci\gfx\seq_decoder.h">
+			</File>
 		</Filter>
 		<Filter
 			Name="sfx">
