--- a/dists/msvc9/residual.vcproj
+++ b/dists/msvc9/residual.vcproj
@@ -724,10 +724,6 @@
 					>
 				</File>
 				<File
-					RelativePath="..\..\engine\lua\lparser.cpp"
-					>
-				</File>
-				<File
 					RelativePath="..\..\engine\lua\lparser.h"
 					>
 				</File>
@@ -757,6 +753,14 @@
 				</File>
 				<File
 					RelativePath="..\..\engine\lua\lstrlib.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\engine\lua\lstx.cpp"
+					>
+				</File>
+				<File
+					RelativePath="..\..\engine\lua\lstx.h"
 					>
 				</File>
 				<File
