--- a/dists/msvc71/residual.vcproj
+++ b/dists/msvc71/residual.vcproj
@@ -524,9 +524,6 @@
 					RelativePath="..\..\engine\lua\lopcodes.h">
 				</File>
 				<File
-					RelativePath="..\..\engine\lua\lparser.cpp">
-				</File>
-				<File
 					RelativePath="..\..\engine\lua\lparser.h">
 				</File>
 				<File
@@ -549,6 +546,12 @@
 				</File>
 				<File
 					RelativePath="..\..\engine\lua\lstrlib.cpp">
+				</File>
+				<File
+					RelativePath="..\..\engine\lua\lstx.cpp">
+				</File>
+				<File
+					RelativePath="..\..\engine\lua\lstx.h">
 				</File>
 				<File
 					RelativePath="..\..\engine\lua\ltable.cpp">
